src/cli/snapshots/cuc_cli__tests__snapshot_tests__quality_analysis_empty_command.snap
---
source: crates/cuc-cli/src/tests.rs
expression: analysis
---
score: 0.15
issues:
  - "Command does not start with 'ibmcloud'"
  - Command is empty
  - Command spans multiple lines
suggestions:
  - "Ensure the command starts with 'ibmcloud'"
  - Command may not follow common IBM Cloud CLI patterns
  - Use a single-line command
