src/cli/snapshots/cuc_cli__tests__snapshot_tests__quality_analysis_incomplete_command.snap
---
source: crates/cuc-cli/src/tests.rs
expression: analysis
---
score: 0.6
issues:
  - Command is too short
suggestions:
  - Command may not follow common IBM Cloud CLI patterns
